Add theme toggle button to dashboard
Added a theme toggle button to the header.

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,9 @@
                 </div>
             </div>
             <div class="header-right">
+                <button class="theme-toggle" id="theme-toggle" title="Alternar Modo Escuro">
+                    <i class="fas fa-moon"></i>
+                </button>
                 <button class="profile-btn" id="profile-btn" title="Meu Perfil">
                     <i class="fas fa-user"></i>
                 </button>
